--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-hooks-update",
+  "homepage": "https://norman518.github.io/react-hook-learning-project/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,7 +12,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "eslint": "eslint .",
+    "prettier": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
+    "format": "npm run prettier && npm run eslint",
+    "deploy": "npm run format && npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,5 +32,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "gh-pages": "^2.2.0",
+    "prettier": "^1.19.1"
   }
 }
